# door-lock

debugModule/: .gitignore  CMakeLists.txt
debugModule/Libraries/STM8L15x_StdPeriph_Driver/src/: stm8l15x_clk.c
debugModule/Project/STM8L15x_StdPeriph_Examples/ADC/ADC_IDD_measurement/: stm8l15x_it.c
debugModule/Project/STM8L15x_StdPeriph_Examples/ADC/ADC_IT/: stm8l15x_it.c
debugModule/Project/STM8L15x_StdPeriph_Examples/CLK/CLK_SYSCLKSwitch/: stm8l15x_it.c
debugModule/Project/STM8L15x_StdPeriph_Examples/COMP/COMP1_Halt/: stm8l15x_it.c
debugModule/Project/STM8L15x_StdPeriph_Examples/PWR/PWR_PVD_Halt/: stm8l15x_it.c
debugModule/Project/STM8L15x_StdPeriph_Examples/TIM4/TIM4_TimeBase/: main.c  stm8l15x_it.c
debugModule/Project/STM8L15x_StdPeriph_Examples/USART/USART_Printf/: stm8l15x_it.c
debugModule/Project/STM8L15x_StdPeriph_Template/EWSTM8/: project.dep  project.ewd  project.ewp  project.ewt
debugModule/Project/STM8L15x_StdPeriph_Template/EWSTM8/STM8L05X_MD_VL(STM8L05xx6)/Exe/: project.out
debugModule/Project/STM8L15x_StdPeriph_Template/EWSTM8/settings/: project.STM8L05X_MD_VL(STM8L05xx6).cspy.bat  project.STM8L05X_MD_VL(STM8L05xx6).cspy.ps1  project.STM8L05X_MD_VL(STM8L05xx6).driver.xcl  project.STM8L05X_MD_VL(STM8L05xx6).general.xcl  project.STM8L15X_MD(STM8L15xx4_6).cspy.bat  project.STM8L15X_MD(STM8L15xx4_6).cspy.ps1  project.STM8L15X_MD(STM8L15xx4_6).driver.xcl  project.STM8L15X_MD(STM8L15xx4_6).general.xcl  project.dbgdt  project.dnx  project.wsdt
debugModule/Source/User/: dateTime.c  dateTime.h  gpio.c  gpio.h  main.c  power.c  power.h  rtc.c  rtc.h  stm8l15x_it.c  timer4.c  timer4.h  usart.c  usart.h
debugModule/Source/User/menu/: EventManager.c  EventManager.h  MainMenu.c  MainMenu.h  MenuHelper.c  MenuHelper.h  SystemParameters.c  SystemParameters.h
debugModule/Source/User/menu/SystemSetting/: ConfigWifi.c  ConfigWifi.h  DateSetting.c  DateSetting.h  RecoverSetting.c  RecoverSetting.h  SettingMenu.c  SettingMenu.h  SystemSettings.c  SystemSettings.h  VoiceSetting.c  VoiceSetting.h
debugModule/Source/User/menu/UserManager/: AddUser.c  AddUser.h  DeleteUser.c  DeleteUser.h  EditUser.c  EditUser.h  ManageUserMenu.c  ManageUserMenu.h  UserList.c  UserList.h
debugModule/Source/driver/: FingerVein.c  FingerVein.h  NB_73.c  NB_73.h  RTC.c  RTC.h  board.c  board.h  card.c  card.h  door.c  door.h  esp32.c  esp32.h  fingerprint.c  fingerprint.h  keys.c  keys.h  led.c  led.h  nvc.c  nvc.h  oled.c  oled.h  rc523.c  rc523.h  tim4.c  tim4.h  tsm12.c  tsm12.h  usart.c  usart.h
debugModule/Utilities/Misc/: timing_delay.c  timing_delay.h
pl2303驱动/: Thumbs.db  ds_pl2303_v16B.rar  西门子接口线.txt
代码和硬件电路/智能锁实践教学平台-硬件电路/MainBoard/: core.SchDoc  device.SchDoc  interface.SchDoc  monitor.SchDoc  touch.SchDoc  usb.SchDoc  智能锁实践教学平台.PrjPcb  智能锁实践教学平台.SchLib
代码和硬件电路/智能锁实践教学平台-硬件电路/ReadCard/: ReadCard.PrjPcb  ReadCard.SCHLIB  ReadCard.SchDoc
实验指导书/1.基础实验/: 1.GPIO实验.docx  2.TIMER实验.docx  3.USART实验.docx  4.RTC实验.docx  5.单片机低功耗实验.docx  6.EEPROM实验.docx
实验指导书/1.基础实验/eeprom_tmp/: [Content_Types].xml
实验指导书/1.基础实验/eeprom_tmp/docProps/: app.xml  core.xml
实验指导书/1.基础实验/eeprom_tmp/word/: document.xml  endnotes.xml  footnotes.xml  numbering.xml  settings.xml  webSettings.xml
实验指导书/1.基础实验/eeprom_tmp/word/_rels/: document.xml.rels
实验指导书/1.基础实验/gpio_unpacked/: [Content_Types].xml
实验指导书/1.基础实验/gpio_unpacked/docProps/: app.xml  core.xml
实验指导书/1.基础实验/gpio_unpacked/word/: document.xml  endnotes.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml
实验指导书/1.基础实验/gpio_unpacked/word/_rels/: document.xml.rels
实验指导书/1.基础实验/gpio_unpacked/word/media/: image1.emf  image2.emf
实验指导书/1.基础实验/usart_temp/: [Content_Types].xml
实验指导书/1.基础实验/usart_temp/customXml/: itemProps1.xml
实验指导书/1.基础实验/usart_temp/docProps/: app.xml  core.xml
实验指导书/1.基础实验/usart_temp/word/: document.xml  endnotes.xml  fontTable.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml  webSettings.xml
实验指导书/1.基础实验/usart_temp/word/_rels/: document.xml.rels
实验指导书/2.提高实验/: 1.led驱动.docx  12.应用程序框架.docx  13.用户管理.docx  14.用户管理菜单.docx  2.电机驱动.docx  3.语音芯片驱动.docx  4.屏幕驱动.docx  5.触摸模块驱动.docx  6.读卡模块驱动.docx  7.指纹识别模块驱动.docx  8.Biovo Vein V1.0通讯协议.doc  8.指静脉识别模块驱动.docx  9.NB73模块驱动.docx  9.SIM7020模块驱动.docx
实验指导书/2.提高实验/card_tmp/docProps/: app.xml  core.xml
实验指导书/2.提高实验/card_tmp/word/: document.xml  endnotes.xml  footnotes.xml  numbering.xml  settings.xml  webSettings.xml
实验指导书/2.提高实验/card_tmp/word/_rels/: document.xml.rels
实验指导书/2.提高实验/card_tmp/word/embeddings/: Microsoft_Visio_Drawing.vsdx
实验指导书/2.提高实验/card_tmp/word/media/: image2.emf  image3.emf
实验指导书/3.进阶实验/: 1.智能锁基础工程.docx  2.撬锁报警.docx  3.密码锁.docx  4.刷卡锁.docx  5.指纹锁.docx  6.指静脉锁.docx  7.蓝牙锁.docx  8.wifi锁.docx  9.nb锁.docx
实验指导书/3.进阶实验/vein_tmp/: [Content_Types].xml
实验指导书/3.进阶实验/vein_tmp/docProps/: app.xml  core.xml
实验指导书/3.进阶实验/vein_tmp/word/: document.xml  endnotes.xml  footnotes.xml  numbering.xml  settings.xml  styles.xml  webSettings.xml
实验指导书/3.进阶实验/vein_tmp/word/_rels/: document.xml.rels
实验指导书/3.进阶实验/vein_tmp/word/embeddings/: Microsoft_Visio_Drawing.vsdx  Microsoft_Visio_Drawing1.vsdx  Microsoft_Visio_Drawing2.vsdx
实验指导书/3.进阶实验/vein_tmp/word/media/: image1.emf  image2.emf  image3.emf
智能锁实践教学平台-硬件电路/MainBoard/: power.SchDoc
智能锁实践教学平台-硬件电路/ReadCard/: ReadCard.PcbLib  ReadCard.PrjPcbStructure
智能锁实践教学平台-硬件电路/Touch/: TouchBoard.PcbLib  TouchBoard.PrjPcb  TouchBoard.PrjPcbStructure  TouchBoard.SCHLIB  touch.SchDoc
